--- a/minihospital/appoint/templates/appointment.html
+++ b/minihospital/appoint/templates/appointment.html
@@ -27,7 +27,7 @@
         </div> -->
 
         <!-- <div class="text-red-500 mb-4">
-            {{ form.start_sympDate.errors }}
+            {{ form.start_sympdate.errors }}
         </div>
          -->
         
@@ -229,7 +229,7 @@
                     
                     <div class="text-[#494949] text-lg font-normal">มีอาการตั้งแต่  : </div>
                     <div class="w-[350px] flex items-center relative">   
-                        {{ form.start_sympDate }}
+                        {{ form.start_sympdate }}
                         <img src="{% static 'image/greycalendar.png' %}" onclick="openDatePicker('sympDate')"  class="cursor-pointer absolute right-6" width="27" height="27">
                     </div>
         
